package tree;

public class UnknownValueException extends Exception {
    
    public UnknownValueException(String message) {
        super(message);
    }
}
    public UnknownValueException(String message) {
        super(message);
    }
}
