---
title: Package tree - standalone
---
%% Sorgente: project/standalone/src/tree/ContinuousNode.java
%% Sorgente: project/standalone/src/tree/DiscreteNode.java
%% Sorgente: project/standalone/src/tree/LeafNode.java
%% Sorgente: project/standalone/src/tree/Node.java
%% Sorgente: project/standalone/src/tree/RegressionTree.java
%% Sorgente: project/standalone/src/tree/SplitNode.java
%% Sorgente: project/standalone/src/tree/UnknownValueException.java
classDiagram
  direction TB
  namespace tree {
    class ContinuousNode
    class DiscreteNode
    class LeafNode
    class Node
    class RegressionTree
    class SplitNode
    class SplitInfo
    class UnknownValueException
  }

  class ContinuousNode {
    +ContinuousNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: ContinuousAttribute)
    +setSplitInfo(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    +testCondition(in value: Object) int
    +toString() String
  }

  class DiscreteNode {
    +DiscreteNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: DiscreteAttribute)
    +setSplitInfo(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    +testCondition(in value: Object) int
    +toString() String
  }

  class LeafNode {
    -predictedClassValue: Double
    +LeafNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int)
    +getPredictedClassValue() Double
    +getNumberOfChildren() int
    +toString() String
  }

  class Node {
    <<abstract>>
    -serialVersionUID: long$
    #idNodeCount: int$
    #idNode: int
    #beginExampleIndex: int
    #endExampleIndex: int
    #variance: double
    +Node(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int)
    +getIdNode() int
    +getBeginExampleIndex() int
    +getEndExampleIndex() int
    +getVariance() double
    +getNumberOfChildren() int*
    +toString() String
  }

  class RegressionTree {
    -serialVersionUID: long$
    -root: Node
    -childTree: RegressionTree[]
    +RegressionTree()
    +RegressionTree(in trainingSet: Data)
    ~isLeaf(in trainingSet: Data, in begin: int, in end: int, in numberOfExamplesPerLeaf: int) boolean
    -determineBestSplitNode(in trainingSet: Data, in begin: int, in end: int) SplitNode
    ~learnTree(in trainingSet: Data, in begin: int, in end: int, in numberOfExamplesPerLeaf: int)
    +printTree()
    +printRules()
    -printRules(in current: String)
    +toString() String
    +salva(in nomeFile: String)
    +carica(in nomeFile: String) RegressionTree$
    +predictClass() Double
  }

  class SplitNode {
    <<abstract>>
    #attribute: Attribute
    #mapSplit: List~SplitInfo~
    #splitVariance: double
    +setSplitInfo(in trainingSet: Data, in beginExampelIndex: int, in endExampleIndex: int, in attribute: Attribute)*
    +testCondition(in value: Object) int*
    +SplitNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    ~getAttribute() Attribute
    +getVariance() double
    +compareTo(in o: SplitNode) int
    +getNumberOfChildren() int
    ~getSplitInfo(in child: int) SplitInfo
    +formulateQuery() String
    +toString() String
  }

  class SplitInfo {
    -serialVersionUID: long$
    ~splitValue: Object
    ~beginIndex: int
    ~endIndex: int
    ~numberChild: int
    ~comparator: String
    ~SplitInfo(in splitValue: Object, in beginIndex: int, in endIndex: int, in numberChild: int)
    ~SplitInfo(in splitValue: Object, in beginIndex: int, in endIndex: int, in numberChild: int, in comparator: String)
    ~getBeginindex() int
    ~getEndIndex() int
    ~getSplitValue() Object
    +toString() String
    ~getComparator() String
  }

  class UnknownValueException {
    +UnknownValueException(in message: String)
  }

  class Serializable {
    <<interface>>
  }
  class ComparableSplitNode["Comparable&lt;SplitNode&gt;"] {
    <<interface>>
  }
  class Data["data.Data"]
  class Attribute["data.Attribute"]
  class Keyboard["utility.Keyboard"]
  class Exception

  LeafNode --|> Node
  SplitNode --|> Node
  ContinuousNode --|> SplitNode
  DiscreteNode --|> SplitNode
  Node ..|> Serializable
  RegressionTree ..|> Serializable
  SplitInfo ..|> Serializable
  SplitNode ..|> ComparableSplitNode
  RegressionTree *-- "0..1" Node : root
  RegressionTree *-- "0..*" RegressionTree : childTree
  SplitNode "1" *-- "0..*" SplitInfo : mapSplit
  SplitNode --> "1" Attribute : attribute
  Node ..> Data
  RegressionTree ..> Data
  UnknownValueException --|> Exception
  RegressionTree ..> UnknownValueException
  RegressionTree ..> Keyboard

  note for SplitInfo "Classe interna non statica di SplitNode"
